--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,18 @@
 #
 # https://dockhand.pro/manual/
 #
----
 services:
 #
   dockhand:
     image: fnsys/dockhand:latest
     container_name: dockhand
-    user: "0:0"
+    #user: "0:0"
     environment:
-      #- PUID=${PUID}
-      #- PGID=${PGID}
+      - PUID=${PUID}
+      - PGID=${PGID}
       - TZ=${TZ}
-    #group_add:
-      #- "988"  # Docker group GID for socket access
+    group_add:
+      - "${DOCKER_GID}"  # Docker group GID for socket access
     volumes:
       - ${LOCVOL1}dockhand:/app/data
       - /var/run/docker.sock:/var/run/docker.sock
