--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
   dockhand:
     image: fnsys/dockhand:latest
     container_name: dockhand
-    #user: "0:0"
+    #user: "0:0" # for root
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
@@ -15,7 +15,7 @@ services:
       - "${DOCKER_GID}"  # Docker group GID for socket access
     volumes:
       - ${LOCVOL1}dockhand:/app/data
-      - /var/run/docker.sock:/var/run/docker.sock
+      #- /var/run/docker.sock:/var/run/docker.sock
     ports:
       - 3000:3000
     restart: unless-stopped
