--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,9 +25,9 @@ services:
       - socket-proxy
       - default
   socket-proxy:
+    privileged: true
     image: ghcr.io/tecnativa/docker-socket-proxy:master
     container_name: socket-proxy
-    restart: unless-stopped
     environment:
       # Required for Dockhand core functionality
       - CONTAINERS=1
@@ -50,6 +50,7 @@ services:
       - AUTH=0
       - SECRETS=0
       - POST=0
+    restart: unless-stopped
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
     networks:
