move from docker_files to stacks, add envs

--- a/.env
+++ b/.env
@@ -4,3 +4,7 @@ TZ=America/Los_Angeles
 LOCVOL1=/path/to/appdata/
 CONNET=dbr0
 DOCKER_GID=988
+DATA_DIR=${LOCVOL1}dockhand
+HOST_DATA_DIR=
+SKIP_DF_COLLECTION=false
+DISABLE_LOCAL_LOGIN= # https://dockhand.pro/manual/#disable-local-login
